--- a/package.json
+++ b/package.json
@@ -8,14 +8,25 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@zeit/next-sass": "^1.0.1",
     "framer-motion": "^2.6.15",
     "next": "9.5.3",
+    "next-redux-wrapper": "^6.0.2",
     "node-sass": "^4.14.1",
     "react": "16.13.1",
+    "react-animated-cursor": "^2.1.5",
     "react-dom": "16.13.1",
     "react-intersection-observer": "^8.28.5",
     "react-particles-js": "^3.3.0",
-    "styled-components": "^5.2.0"
+    "react-redux": "^7.2.1",
+    "react-typing-effect": "^2.0.3",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-wrapper": "0.0.1",
+    "styled-components": "^5.2.0",
+    "typewriter-effect": "^2.13.1"
   }
 }
